--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -118,8 +118,8 @@
     <string name="dialog_cancel">CANCEL</string>
     <string name="ok">OK</string>
     
-    <string name="user_made_checkin">%1$s also made a check in %2$s</string>
-    <string name="divespot_was_changed">%1$s was changed</string>
+    <string name="user_made_checkin">%1$s also checked in %2$s</string>
+    <string name="divespot_was_changed">%1$s has been changed</string>
     <string name="new_dive_spothas_been_added_near">New dive spot has been added near you %1$s</string>
     <string name="user_dislike_your_review">%1$s disliked your review %2$s</string>
     <string name="user_liked_your_review">%1$s liked your review %2$s</string>
