* guide thanks layout

--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -82,7 +82,7 @@
     <string name="length">Length</string>
     <string name="weight">Weight</string>
     <string name="depth">Depth</string>
-    <string name="sc_name">Sc name</string>
+    <string name="sc_name">Sc Name</string>
     <string name="order">Order</string>
     <string name="scclass">Class</string>
     <string name="reviews">Reviews</string>
