--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -119,7 +119,7 @@
     <string name="dialog_cancel">CANCEL</string>
     <string name="ok">OK</string>
     
-    <string name="user_made_checkin">%1$s also checked in at %2$s</string>
+    <string name="user_made_checkin">%1$s has also checked in at %2$s</string>
     <string name="divespot_was_changed">%1$s has been changed</string>
     <string name="new_dive_spothas_been_added_near">New dive spot has been added near you %1$s</string>
     <string name="user_dislike_your_review">%1$s disliked your review %2$s</string>
