--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -248,7 +248,7 @@
     <string name="there_are_no_dive_spots_here">There are no dive spots here</string>
     <string name="please_choose_another_location">Please choose another location</string>
     <string name="send">SEND</string>
-    <string name="write_a_review">Write a review</string>
+    <string name="write_a_review">At least 30 symbols</string>
     <string name="start_process_register_for_gcm">Registering for Google services</string>
     <string name="please_zoom_in_to_request_dive_spots">Please zoom in to request dive spots</string>
     <string name="start_process_register_for_ddscanner">Registering for DDScanner services</string>
