--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -291,5 +291,7 @@
     <string name="error_message_dive_spot_not_found">For some reason requested this dive spot was not found. Report was captured</string>
     <string name="error_message_already_checked_in">You have already checked in here</string>
     <string name="error_message_already_checked_out">You have already checked out of here</string>
+    <string name="error_message_already_added_to_favourites">You have already added this dive spot to favourites</string>
+    <string name="error_message_already_removed_from_favourites">You have already removed this dive spot from favourites</string>
     <string name="error_connection_failed">Failed to connect to DDScanner service. Please try again later.</string>
 </resources>
