--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -287,8 +287,10 @@
     <string name="comment_already_liked">Dive spot comment has already been liked</string>
     <string name="error_server_error_title">Error occurred</string>
     <string name="error_connection_error_title">Connection error</string>
-    <string name="error_unexpected_error_title">Opps. Looks like we have an unexpected issue here. Report was captured</string>
-    <string name="error_message_dive_spot_not_found">For some reason requested this dive spot was not found. Report was captured</string>
+    <string name="error_unexpected_error">Opps. Looks like we have an unexpected issue here. Report was captured</string>
+    <string name="error_message_dive_spot_not_found">For some reason this dive spot was not found. Report was captured</string>
+    <string name="error_unexpected_error_checkins_counter">Opps. Looks like we have an unexpected issue while updating checkins count. Report was captured</string>
+    <string name="error_message_dive_spot_not_found_checkins_counter">For some reason while updating checkins count this dive spot was not found. Report was captured</string>
     <string name="error_message_already_checked_in">You have already checked in here</string>
     <string name="error_message_already_checked_out">You have already checked out of here</string>
     <string name="error_message_already_added_to_favourites">You have already added this dive spot to favourites</string>
