--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -289,7 +289,10 @@
     <string name="error_connection_error_title">Connection error</string>
     <string name="error_unexpected_error_title">Opps. Looks like we have an unexpected issue here. Report was captured</string>
     <string name="error_message_dive_spot_not_found">For some reason requested this dive spot was not found. Report was captured</string>
+    <string name="error_message_comment_not_found">For some reason requested this comment was not found. Report was captured</string>
     <string name="error_message_already_checked_in">You have already checked in here</string>
     <string name="error_message_already_checked_out">You have already checked out of here</string>
     <string name="error_connection_failed">Failed to connect to DDScanner service. Please try again later.</string>
+    <string name="error_self_comment_like_banned">You cannot like your comment</string>
+    <string name="error_self_comment_dislike_banned">You cannot dislike your comment</string>
 </resources>
