--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -290,6 +290,9 @@
     <string name="error_unexpected_error_title">Opps. Looks like we have an unexpected issue here. Report was captured</string>
     <string name="error_message_dive_spot_not_found">For some reason requested this dive spot was not found. Report was captured</string>
     <string name="error_message_comment_not_found">For some reason requested this comment was not found. Report was captured</string>
+    <string name="error_message_you_cannot_report_self_review">You cannot report self review</string>
+    <string name="error_message_comment_also_disliked">This comment was also disliked</string>
+    <string name="error_message_comment_also_liked">This comment was also liked</string>
     <string name="error_message_already_checked_in">You have already checked in here</string>
     <string name="error_message_already_checked_out">You have already checked out of here</string>
     <string name="error_connection_failed">Failed to connect to DDScanner service. Please try again later.</string>
