--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -307,4 +307,5 @@
     <string name="error_connection_failed">Failed to connect to DDScanner service. Please check your internet connection.</string>
     <string name="error_self_comment_like_banned">You cannot like your comment</string>
     <string name="error_self_comment_dislike_banned">You cannot dislike your comment</string>
+    <string name="error_no_rights_to_edit_dive_spot">Sorry, but only dive centers can edit this dive spot.</string>
 </resources>
