--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -308,4 +308,6 @@
     <string name="error_self_comment_like_banned">You cannot like your comment</string>
     <string name="error_self_comment_dislike_banned">You cannot dislike your comment</string>
     <string name="error_no_rights_to_edit_dive_spot">Sorry, but only dive centers can edit this dive spot.</string>
+    <string name="error_connection_failed_while_getting_dive_spots">Failed to connect to DDScanner service while requesting dive spots. Please check your internet connection.</string>
+    <string name="error_unexpected_error_while_getting_dive_spots">Opps. Looks like we have an unexpected issue while trying to get dive spots. Report was captured</string>
 </resources>
