--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -317,4 +317,5 @@
     <string name="no_title_yet">There are no titles yet</string>
     <string name="no_achievements_yet">No achievements yet</string>
     <string name="start_acivity">Start your activity to get the first title</string>
+    <string name="lienes">Licenses</string>
 </resources>
