--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -317,4 +317,9 @@
     <string name="no_title_yet">There are no titles yet</string>
     <string name="no_achievements_yet">No achievements yet</string>
     <string name="start_acivity">Start your activity to get the first title</string>
+    <string name="dialog_leave_title">Attention!</string>
+    <string name="dialog_leave_spot_message">If you leave the page your dive spot will be lost</string>
+    <string name="dialog_leave_review_message">If you leave the page your review will be lost</string>
+    <string name="cencel_dialog">cancel</string>
+    <string name="leave">leave</string>
 </resources>
