--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -329,4 +329,8 @@
     <string name="dive_cente">Dive Center</string>
     <string name="sign_up_toolbar">Sign Up</string>
     <string name="login_toolbar">Login</string>
+    <string name="enter_your_email_address_below_and_we_ll_send_you_password_reset_instructions">Enter your email address below and we’ll send you password reset instructions</string>
+    <string name="ema">Email</string>
+    <string name="send_forgot">send</string>
+    <string name="forgot_password">Forgot password</string>
 </resources>
