+ checked in dialog

--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -345,4 +345,6 @@
     <string name="forgot_password_btn">Forgot password?</string>
     <string name="sign_in_with_facebook">Sign in with Facebook</string>
     <string name="sign_in_with_google">Sign in with Google</string>
+    <string name="checkd_in">Checked in!</string>
+    <string name="write_review_dots">Write review...</string>
 </resources>
