~ change button to add sealife

--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -347,4 +347,5 @@
     <string name="sign_in_with_google">Sign in with Google</string>
     <string name="maps">Maps</string>
     <string name="add_photo_btn">Add photo</string>
+    <string name="add_sea_life">Add sea life</string>
 </resources>
