--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -348,4 +348,5 @@
     <string name="maps">Maps</string>
     <string name="add_photo_btn">Add photo</string>
     <string name="add_sea_life">Add sea life</string>
+    <string name="everyone_can_edit">Everyone can edit</string>
 </resources>
