--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -103,7 +103,7 @@
     <string name="favourites">Favorites</string>
     <string name="full_name">Full name</string>
     <string name="about">About</string>
-    <string name="write_review">Write a review</string>
+    <string name="write_review">Write review</string>
     <string name="show_all">Show all reviews (%1$s)</string>
     <string name="visibility_pattern">%1$s - %2$s meters</string>
     <string name="skobka">)</string>
@@ -350,4 +350,6 @@
     <string name="add_sea_life">Add sea life</string>
     <string name="everyone_can_edit">Everyone can edit</string>
     <string name="choose_dive_center">Choose dive center</string>
+    <string name="show_all_reviews_pattern">Show all reviews (%1$s)</string>
+    <string name="country_characteristic">Country</string>
 </resources>
