--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -314,7 +314,7 @@
     <string name="likes_profile">LIKES</string>
     <string name="dislikes">DISLIKES</string>
     <string name="achievements">Achievements</string>
-    <string name="no_title_yet">There are no titles yet</string>
+    <string name="no_title_yet">You didn’t get the title yet</string>
     <string name="no_achievements_yet">No achievements yet</string>
     <string name="start_acivity">Start your activity to get the first title</string>
     <string name="lienes">Licenses</string>
@@ -352,4 +352,7 @@
     <string name="choose_dive_center">Choose dive center</string>
     <string name="show_all_reviews_pattern">Show all reviews (%1$s)</string>
     <string name="country_characteristic">Country</string>
+    <string name="acievements_block_title">Achievements</string>
+    <string name="photos_block_title">Photos</string>
+    <string name="no_photos_yet">The user has not uploaded the photos yet</string>
 </resources>
