--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -355,4 +355,6 @@
     <string name="acievements_block_title">Achievements</string>
     <string name="photos_block_title">Photos</string>
     <string name="no_photos_yet">The user has not uploaded the photos yet</string>
+    <string name="pass_incorrect">Login or password is incorrect</string>
+    <string name="title_pass_incorrect">Error</string>
 </resources>
