--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -357,4 +357,11 @@
     <string name="no_photos_yet">The user has not uploaded the photos yet</string>
     <string name="pass_incorrect">Login or password is incorrect</string>
     <string name="title_pass_incorrect">Error</string>
+    <string name="offer">Offers</string>
+    <string name="dc_address">Address</string>
+    <string name="dc_email">E-mail</string>
+    <string name="dc_phone">Phone</string>
+    <string name="dc_instructors">Instructors</string>
+    <string name="dc_languages">Languages</string>
+    <string name="dive_spots_profile_dc">Dive spots</string>
 </resources>
