--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -364,4 +364,5 @@
     <string name="dc_instructors">Instructors</string>
     <string name="dc_languages">Languages</string>
     <string name="dive_spots_profile_dc">Dive spots</string>
+    <string name="base_photo_url">https://ddsapi.ilave.pro/v2_0/image/%1$s?size=%2$s</string>
 </resources>
