+ dive center profile edit layout

--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -365,4 +365,9 @@
     <string name="dc_languages">Languages</string>
     <string name="dive_spots_profile_dc">Dive spots</string>
     <string name="base_photo_url">https://ddsapi.ilave.pro/v2_0/image/%1$s?size=%2$s</string>
+    <string name="change">CHANGE</string>
+    <string name="add_phone">+ Add phone</string>
+    <string name="add_e_mail">+ Add e-mail</string>
+
+
 </resources>
