--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -370,4 +370,5 @@
     <string name="maps_toolbar_title">Maps</string>
     <string name="reove_from_facorites">Remove from favorites</string>
     <string name="add_to_favorites">Add to favorites</string>
+    <string name="sealfe_low">Sea life</string>
 </resources>
