~ new photos view in add pot activity

--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -346,7 +346,7 @@
     <string name="sign_in_with_facebook">Sign in with Facebook</string>
     <string name="sign_in_with_google">Sign in with Google</string>
     <string name="maps">Maps</string>
-    <string name="add_photo_btn">Add photo</string>
+    <string name="add_photo_btn">Photo</string>
     <string name="checkd_in">Checked in!</string>
     <string name="write_review_dots">Write review...</string>
     <string name="add_sea_life">Add sea life</string>
