--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -373,4 +373,5 @@
     <string name="add_to_favorites">Add to favorites</string>
     <string name="sealfe_low">Sea life</string>
     <string name="change_account">Change account</string>
+    <string name="add_account">+ Add account</string>
 </resources>
