--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -372,5 +372,7 @@
     <string name="reove_from_facorites">Remove from favorites</string>
     <string name="add_to_favorites">Add to favorites</string>
     <string name="sealfe_low">Sea life</string>
-    <string name="register">Register</string>
+    <string name="change_account">Change account</string>
+    <string name="add_account">+ Add account</string>
+    <string name="new_language">New language</string>
 </resources>
