--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -375,4 +375,5 @@
     <string name="change_account">Change account</string>
     <string name="add_account">+ Add account</string>
     <string name="dive_center_spots_count">My dive spots (%1$s)</string>
+    <string name="i_am_working_here">I am working here</string>
 </resources>
