--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -376,4 +376,5 @@
     <string name="add_account">+ Add account</string>
     <string name="dive_center_spots_count">My dive spots (%1$s)</string>
     <string name="i_am_working_here">I am working here</string>
+    <string name="approve_the_information">Approve the information?</string>
 </resources>
