- screens with locations providers

--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -379,4 +379,5 @@
     <string name="new_language">New language</string>
     <string name="register">Register</string>
     <string name="approve_the_information">Approve the information?</string>
+    <string name="turn_on_gps">Please, turn on GPS to allow Deep Dive Scanner to show the spots nearby</string>
 </resources>
