~ refactoring pick photos + edit user profile activity

--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -381,4 +381,6 @@
     <string name="approve_the_information">Approve the information?</string>
     <string name="turn_on_gps">Please, turn on GPS to allow Deep Dive Scanner to show the spots nearby</string>
     <string name="diver_level">Diver level</string>
+    <string name="edit_profile_activity">Edit profile</string>
+    <string name="logout_menu">LOGOUT</string>
 </resources>
