--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -283,8 +283,8 @@
     <string name="review_error">Review must contain at least 30 characters</string>
     <string name="please_write_a_review">Please write a review to dive spot</string>
     <string name="new_review">New Review</string>
-    <string name="comment_already_disliked">Dive spot comment has already been disliked</string>
-    <string name="comment_already_liked">Dive spot comment has already been liked</string>
+    <string name="comment_already_disliked">Dive spot commentOld has already been disliked</string>
+    <string name="comment_already_liked">Dive spot commentOld has already been liked</string>
     <string name="error_server_error_title">Error occurred</string>
     <string name="error_connection_error_title">Connection error</string>
     <string name="error_unexpected_error">Opps. Looks like we have an unexpected issue here. Report was captured</string>
@@ -294,10 +294,10 @@
     <string name="error_unexpected_error_checkins_counter">Opps. Looks like we have an unexpected issue while updating checkins count. Report was captured</string>
     <string name="error_message_dive_spot_not_found_checkins_counter">For some reason while updating checkins count this dive spot was not found. Report was captured</string>
     <string name="error_unexpected_error_reviews_counter">Opps. Looks like we have an unexpected issue while updating reviews count. Report was captured</string>
-    <string name="error_message_comment_not_found">For some reason requested this comment was not found. Report was captured</string>
+    <string name="error_message_comment_not_found">For some reason requested this commentOld was not found. Report was captured</string>
     <string name="error_message_you_cannot_report_self_review">You cannot report self review</string>
-    <string name="error_message_comment_also_disliked">This comment was also disliked</string>
-    <string name="error_message_comment_also_liked">This comment was also liked</string>
+    <string name="error_message_comment_also_disliked">This commentOld was also disliked</string>
+    <string name="error_message_comment_also_liked">This commentOld was also liked</string>
     <string name="error_message_dive_spot_not_found_reviews_counter">For some reason while updating reviews count this dive spot was not found. Report was captured</string>
     <string name="error_message_already_checked_in">You have already checked in here</string>
     <string name="error_message_already_checked_out">You have already checked out of here</string>
@@ -305,8 +305,8 @@
     <string name="error_message_already_removed_from_favourites">You have already removed this dive spot from favourites</string>
     <string name="error_message_already_validated_dive_spot_data">You have already validated this dive spot data</string>
     <string name="error_connection_failed">Failed to connect to DDScanner service. Please check your internet connection.</string>
-    <string name="error_self_comment_like_banned">You cannot like your comment</string>
-    <string name="error_self_comment_dislike_banned">You cannot dislike your comment</string>
+    <string name="error_self_comment_like_banned">You cannot like your commentOld</string>
+    <string name="error_self_comment_dislike_banned">You cannot dislike your commentOld</string>
     <string name="error_no_rights_to_edit_dive_spot">Sorry, but only dive centers can edit this dive spot.</string>
     <string name="error_connection_failed_while_getting_dive_spots">Failed to connect to DDScanner service while requesting dive spots. Please check your internet connection.</string>
     <string name="error_unexpected_error_while_getting_dive_spots">Opps. Looks like we have an unexpected issue while trying to get dive spots. Report was captured</string>
@@ -386,4 +386,5 @@
     <string name="diver_level">Diver level</string>
     <string name="edit_profile_activity">Edit profile</string>
     <string name="logout_menu">LOGOUT</string>
+    <string name="edit_comment">Edit Comment</string>
 </resources>
