--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -392,4 +392,5 @@
     <string name="add_ds">Add dive spot</string>
     <string name="open_map">open map</string>
     <string name="addressd">Address</string>
+    <string name="choose_dc">Chose dive center</string>
 </resources>
