--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -393,4 +393,5 @@
     <string name="open_map">open map</string>
     <string name="addressd">Address</string>
     <string name="choose_dc">Chose dive center</string>
+    <string name="instructors">Instructors</string>
 </resources>
