+ name field in sign up view

--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -394,4 +394,5 @@
     <string name="addressd">Address</string>
     <string name="choose_dc">Chose dive center</string>
     <string name="instructors">Instructors</string>
+    <string name="name_register">Name</string>
 </resources>
