--- a/trunk/ddscanner/app/src/main/res/values/strings.xml
+++ b/trunk/ddscanner/app/src/main/res/values/strings.xml
@@ -399,4 +399,12 @@
     <string name="provide_your_address_to_be_shown_on_the_map">Provide your address to be shown on the map</string>
     <string name="languages">Languages</string>
     <string name="add_lang">Add language</string>
+    <string name="activity_type_instructor_added">%1$s added as a new instructor</string>
+    <string name="activity_type_photo_liked">%1$s liked your photo %2$s</string>
+    <string name="activity_type_dive_spot_added">New spot %1$s added near you. Please, approve the information</string>
+    <string name="activity_type_review_added">New review of %1$s added</string>
+    <string name="activity_type_dive_spot_changed">%1$s changed</string>
+    <string name="activity_type_review_liked">%1$s liked your review %2$s</string>
+    <string name="activity_type_review_disliked">%1$s disliked your review %2$s</string>
+
 </resources>
